--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-
+    "@vuelidate/core": "^2.0.0-alpha.44",
+    "@vuelidate/validators": "^2.0.0-alpha.31",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primevue": "^3.16.2",
