--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primevue": "^3.16.2",
+    "sass": "^1.54.8",
+    "scss": "^0.2.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.4"
   },
