--- a/FE/package.json
+++ b/FE/package.json
@@ -1,11 +1,11 @@
 {
   "name": "solvve_course_js_2",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "lint": "eslint .. --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@vuelidate/core": "^2.0.0-alpha.44",
@@ -24,8 +24,9 @@
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "eslint": "^8.21.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.3.0",
-    "prettier": "^2.7.1",
+    "prettier": "2.7.1",
     "vite": "^3.0.4"
   }
 }
