--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vuelidate/core": "^2.0.0-alpha.44",
     "@vuelidate/validators": "^2.0.0-alpha.31",
     "axios": "^0.27.2",
+    "lint": "^0.7.0",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primevue": "^3.16.2",
