--- a/package.json
+++ b/package.json
@@ -18,8 +18,5 @@
   "bugs": {
     "url": "https://github.com/olsy-solvve/solvve_course_js_2/issues"
   },
-  "homepage": "https://github.com/olsy-solvve/solvve_course_js_2#readme",
-  "dependencies": {
-    "primeflex": "^3.2.1"
-  }
+  "homepage": "https://github.com/olsy-solvve/solvve_course_js_2#readme"
 }
