--- a/FE/package.json
+++ b/FE/package.json
@@ -12,6 +12,7 @@
     "@vuelidate/validators": "^2.0.0-alpha.31",
     "axios": "^0.27.2",
     "lint": "^0.7.0",
+    "lodash": "^4.17.21",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
     "primevue": "^3.16.2",
