fix run command

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "setup": "cd ./FE && npm install && cd ../BE && npm install",
     "lint": "cd ./FE && npm run lint && cd ../BE && npm run lint",
-    "dev": "cd ./FE && npm run dev && cd ../BE && npm run dev",
+    "dev": "cd ./FE && start npm run dev && cd ../BE && start npm run dev",
     "release": "cd ./FE && npm run build && cd ../BE && npm run release"
   },
   "repository": {
